app/core/cloudkb/depkb/experiments/gcp-k8s-synth2-2026-07-31/rwx-pod.yaml

apiVersion: v1
kind: Pod
metadata: {name: depkb-synth2-rwx-pod}
spec:
  containers:
  - name: pause
    image: registry.k8s.io/pause:3.9
    volumeMounts: [{name: data, mountPath: /data}]
  volumes: [{name: data, persistentVolumeClaim: {claimName: depkb-synth2-rwx}}]
